--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "better-erela.js-apple": "1.0.5",
     "better-erela.js-spotify": "1.3.11",
     "common-tags": "1.8.2",
+    "dayjs": "^1.11.6",
     "discord-akairo": "github:discord-akairo/discord-akairo",
     "discord.js": "13.10.3",
     "dotenv": "16.0.0",
@@ -29,7 +30,6 @@
   },
   "devDependencies": {
     "eslint": "8.9.0",
-    "eslint-config-airbnb-base": "15.0.0",
     "eslint-plugin-import": "2.25.4"
   }
 }
