--- a/package.json
+++ b/package.json
@@ -8,6 +8,8 @@
   "private": true,
   "dependencies": {
     "@discordjs/builders": "0.14.0",
+    "@swc/helpers": "^0.4.12",
+    "@swc/wasm": "^1.3.15",
     "axios": "0.26.0",
     "better-erela.js-apple": "1.0.5",
     "better-erela.js-spotify": "1.3.11",
@@ -17,16 +19,26 @@
     "discord.js": "13.10.3",
     "dotenv": "16.0.0",
     "erela.js": "github:menudocs/erela.js#build",
+    "eris": "^0.17.1",
+    "eris-reactions": "^0.1.4",
+    "esbuild": "^0.15.13",
+    "globby": "^13.1.2",
     "jsoning": "^0.13.23",
     "log4js": "6.5.2",
-    "ms": "2.1.3"
+    "ms": "2.1.3",
+    "nodemon": "^2.0.20",
+    "ts-node": "^10.9.1",
+    "typescript": "^4.8.4"
   },
   "engines": {
     "node": ">=v16.x"
   },
   "scripts": {
-    "start": "bash start.sh",
-    "start:normal": "node src"
+    "build": "node build.mjs",
+    "prebuild": "rimraf dist",
+    "dev": "nodemon",
+    "start": "node -r ts-node/register -r tsconfig-paths/register ./dist/index.js",
+    "start:ts": "ts-node -r tsconfig-paths/register src/index.ts"
   },
   "devDependencies": {
     "eslint": "8.9.0",
