--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "dbr-music",
   "version": "1.0.0",
-  "description": "A dank music discord bot",
+  "description": "A dank music discord !",
   "main": "src/main",
   "author": "Netsky",
   "license": "GPL-3.0",
@@ -15,7 +15,6 @@
     "better-erela.js-spotify": "1.3.11",
     "common-tags": "1.8.2",
     "dayjs": "^1.11.6",
-    "discord-akairo": "github:discord-akairo/discord-akairo",
     "discord.js": "13.10.3",
     "dotenv": "16.0.0",
     "erela.js": "github:menudocs/erela.js#build",
