--- a/package.json
+++ b/package.json
@@ -10,8 +10,6 @@
     "@discordjs/builders": "0.14.0",
     "@swc/helpers": "^0.4.12",
     "@swc/wasm": "^1.3.15",
-    "axios": "0.26.0",
-    "better-erela.js-apple": "1.0.5",
     "better-erela.js-spotify": "1.3.11",
     "common-tags": "1.8.2",
     "dayjs": "^1.11.6",
@@ -19,7 +17,7 @@
     "dotenv": "16.0.0",
     "erela.js": "github:menudocs/erela.js#build",
     "eris": "^0.17.1",
-    "eris-reactions": "^0.1.4",
+    "eris-pagination": "github:TheNetsky/eris-pagination",
     "esbuild": "^0.15.13",
     "globby": "^13.1.2",
     "jsoning": "^0.13.23",
