--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "dayjs": "^1.11.6",
     "discord.js": "13.10.3",
     "dotenv": "16.0.0",
-    "erela.js": "github:menudocs/erela.js#build",
+    "erela.js": "^2.4.0",
     "eris": "^0.17.1",
     "eris-pagination": "github:TheNetsky/eris-pagination",
     "esbuild": "^0.15.13",
